hopefully fixing spillover issues on about

--- a/assets/main.css
+++ b/assets/main.css
@@ -132,7 +132,7 @@ body::before {
 #about {
       background: #2e4057;
       width: 100%;
-      height: 100vh;
+      /*height: 100vh;*/
       color: white;
       margin: 0;
       padding: 0% 20%;
